specify browser in ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ commands:
           condition: << parameters.run-tests >>
           steps:
             - run: cd ./node_modules/protractor && npm i webdriver-manager@latest
-            - run: npx ng test --code-coverage --watch=false --project << parameters.project >>
+            - run: npx ng test --code-coverage --watch=false --project << parameters.project >> --browsers ChromiumNoSandbox
             - run: npx ng e2e << parameters.project >>
   store:
     description: 'Stores build_and_test artifacts'
