--- a/.circleci/config.ch9.yml
+++ b/.circleci/config.ch9.yml
@@ -29,7 +29,7 @@ jobs:
       - run: npm run style
       - run: npm run lint
       - run: npm run build:prod
-      - run: npm test -- --watch=false --code-coverage
+      - run: npm test -- --watch=false --code-coverage --browsers ChromiumNoSandbox
       - run: npm run e2e
 
       - store_test_results:
