--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@angular/common": "11.0.9",
     "@angular/compiler": "11.0.9",
     "@angular/core": "11.0.9",
-    "@angular/fire": "^6.1.0-rc.2",
+    "@angular/fire": "^6.1.4",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "11.0.9",
     "@angular/material": "11.0.3",
@@ -77,13 +77,13 @@
     "@ngrx/entity": "^10.1.2",
     "@ngrx/store": "^10.1.2",
     "@ngrx/store-devtools": "^10.1.2",
-    "firebase": "^8.0.2",
-    "jwt-decode": "^3.1.1",
-    "ngx-mask": "^11.0.0",
+    "firebase": "^8.2.2",
+    "jwt-decode": "^3.1.2",
+    "ngx-mask": "^11.1.4",
     "rxjs": "^6.6.3",
-    "subsink": "^1.0.1",
+    "subsink": "^1.0.2",
     "ts-enum-util": "^4.0.2",
-    "tslib": "^2.0.3",
+    "tslib": "^2.1.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
@@ -91,11 +91,11 @@
     "@angular/cli": "11.0.7",
     "@angular/compiler-cli": "11.0.9",
     "@angular/language-service": "11.0.9",
-    "@types/jasmine": "~3.6.1",
+    "@types/jasmine": "~3.6.2",
     "@types/jasminewd2": "~2.0.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^14.14.7",
+    "@types/node": "^14.14.20",
     "angular-unit-test-helper": "^11.0.2",
     "codelyzer": "^6.0.1",
     "cross-conf-env": "^1.2.1",
@@ -110,8 +110,8 @@
     "jasmine": "^3.6.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
-    "js-beautify": "^1.13.0",
-    "karma": "~5.2.3",
+    "js-beautify": "^1.13.4",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
     "karma-coverage": "^2.0.3",
@@ -121,15 +121,15 @@
     "karma-junit-reporter": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "open-cli": "^6.0.1",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
-    "ts-node": "~9.0.0",
+    "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-etc": "^1.13.7",
+    "tslint-etc": "^1.13.9",
     "tslint-plugin-prettier": "^2.3.0",
-    "tsutils": "^3.17.1",
+    "tsutils": "^3.19.1",
     "typescript": "^4.0.5"
   },
   "importSort": {
