upgrade to ngrx store

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lemon-mart",
-  "version": "11.0.0",
+  "version": "12.0.0",
   "license": "MIT",
   "config": {
     "imageRepo": "073020584345.dkr.ecr.us-east-1.amazonaws.com/lemon-mart",
@@ -72,11 +72,11 @@
     "@angular/platform-browser": "12.0.0-next.8",
     "@angular/platform-browser-dynamic": "12.0.0-next.8",
     "@angular/router": "12.0.0-next.8",
-    "@ngrx/data": "^10.0.1",
-    "@ngrx/effects": "^10.0.1",
-    "@ngrx/entity": "^10.0.1",
-    "@ngrx/store": "^10.0.1",
-    "@ngrx/store-devtools": "^10.0.1",
+    "@ngrx/data": "^11.0.0-rc.0",
+    "@ngrx/effects": "^11.0.0-rc.0",
+    "@ngrx/entity": "^11.0.0-rc.0",
+    "@ngrx/store": "^11.0.0-rc.0",
+    "@ngrx/store-devtools": "^11.0.0-rc.0",
     "firebase": "^8.0.2",
     "jwt-decode": "^3.1.1",
     "ngx-mask": "^11.0.0",
