--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "run-p lint:ts lint:tsc",
     "lint:fix": "run-s lint:ts:fix lint:tsc",
     "e2e": "ng e2e lemon-mart",
-    "build:prod": "ng build --prod",
+    "build:prod": "ng build --configuration production",
     "build:integration": "cross-conf-env docker image build -f integration.Dockerfile . -t $npm_package_config_imageRepo:latest",
     "test:prod": "npm test -- --browsers ChromiumNoSandbox --watch=false",
     "test:prod:e2e": "npm run e2e",
@@ -60,18 +60,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.0.0-next.8",
+    "@angular/animations": "12.1.4",
     "@angular/cdk": "12.0.0-next.6",
-    "@angular/common": "12.0.0-next.8",
-    "@angular/compiler": "12.0.0-next.8",
-    "@angular/core": "12.0.0-next.8",
+    "@angular/common": "12.1.4",
+    "@angular/compiler": "12.1.4",
+    "@angular/core": "12.1.4",
     "@angular/fire": "^6.1.0-rc.2",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "12.0.0-next.8",
+    "@angular/forms": "12.1.4",
     "@angular/material": "12.0.0-next.6",
-    "@angular/platform-browser": "12.0.0-next.8",
-    "@angular/platform-browser-dynamic": "12.0.0-next.8",
-    "@angular/router": "12.0.0-next.8",
+    "@angular/platform-browser": "12.1.4",
+    "@angular/platform-browser-dynamic": "12.1.4",
+    "@angular/router": "12.1.4",
     "@ngrx/data": "^11.0.0-rc.0",
     "@ngrx/effects": "^11.0.0-rc.0",
     "@ngrx/entity": "^11.0.0-rc.0",
@@ -87,10 +87,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1200.0-next.8",
-    "@angular/cli": "12.0.0-next.8",
-    "@angular/compiler-cli": "12.0.0-next.8",
-    "@angular/language-service": "12.0.0-next.8",
+    "@angular-devkit/build-angular": "~12.1.4",
+    "@angular/cli": "12.1.4",
+    "@angular/compiler-cli": "12.1.4",
+    "@angular/language-service": "12.1.4",
     "@types/jasmine": "~3.6.1",
     "@types/jasminewd2": "~2.0.8",
     "@types/jsonwebtoken": "^8.5.0",
