--- a/package.json
+++ b/package.json
@@ -61,14 +61,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "12.1.4",
-    "@angular/cdk": "12.0.0-next.6",
+    "@angular/cdk": "12.1.4",
     "@angular/common": "12.1.4",
     "@angular/compiler": "12.1.4",
     "@angular/core": "12.1.4",
     "@angular/fire": "^6.1.0-rc.2",
     "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "12.1.4",
-    "@angular/material": "12.0.0-next.6",
+    "@angular/material": "12.1.4",
     "@angular/platform-browser": "12.1.4",
     "@angular/platform-browser-dynamic": "12.1.4",
     "@angular/router": "12.1.4",
