--- a/package.json
+++ b/package.json
@@ -65,25 +65,25 @@
     "@angular/common": "12.1.4",
     "@angular/compiler": "12.1.4",
     "@angular/core": "12.1.4",
-    "@angular/fire": "^6.1.0-rc.2",
+    "@angular/fire": "^6.1.5",
     "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "12.1.4",
     "@angular/material": "12.1.4",
     "@angular/platform-browser": "12.1.4",
     "@angular/platform-browser-dynamic": "12.1.4",
     "@angular/router": "12.1.4",
-    "@ngrx/data": "^11.0.0-rc.0",
-    "@ngrx/effects": "^11.0.0-rc.0",
-    "@ngrx/entity": "^11.0.0-rc.0",
-    "@ngrx/store": "^11.0.0-rc.0",
-    "@ngrx/store-devtools": "^11.0.0-rc.0",
-    "firebase": "^8.0.2",
-    "jwt-decode": "^3.1.1",
-    "ngx-mask": "^11.0.0",
+    "@ngrx/data": "^12.3.0",
+    "@ngrx/effects": "^12.3.0",
+    "@ngrx/entity": "^12.3.0",
+    "@ngrx/store": "^12.3.0",
+    "@ngrx/store-devtools": "^12.3.0",
+    "firebase": "^8.8.1",
+    "jwt-decode": "^3.1.2",
+    "ngx-mask": "^12.0.0",
     "rxjs": "^6.6.3",
-    "subsink": "^1.0.1",
+    "subsink": "^1.0.2",
     "ts-enum-util": "^4.0.2",
-    "tslib": "^2.0.3",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -91,13 +91,13 @@
     "@angular/cli": "12.1.4",
     "@angular/compiler-cli": "12.1.4",
     "@angular/language-service": "12.1.4",
-    "@types/jasmine": "~3.6.1",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/jsonwebtoken": "^8.5.0",
+    "@types/jasmine": "~3.8.2",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^14.14.7",
+    "@types/node": "^16.4.10",
     "angular-unit-test-helper": "^12.0.0",
-    "codelyzer": "^6.0.1",
+    "codelyzer": "^6.0.2",
     "cross-conf-env": "^1.2.1",
     "dev-norms": "^1.7.1",
     "fake-jwt-sign": "^1.1.1",
@@ -107,30 +107,30 @@
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
     "init-dev-env": "^1.0.0",
-    "jasmine": "^3.6.3",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
-    "js-beautify": "^1.13.0",
-    "karma": "~6.3.2",
+    "jasmine": "^3.8.0",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "js-beautify": "^1.14.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-edge-launcher": "^0.4.2",
     "karma-htmlfile-reporter": "^0.3.8",
     "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "npm-run-all": "^4.1.5",
-    "open-cli": "^6.0.1",
-    "prettier": "^2.1.2",
+    "open-cli": "^7.0.0",
+    "prettier": "^2.3.2",
     "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
-    "ts-node": "~9.0.0",
+    "ts-node": "~10.1.0",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-etc": "^1.13.7",
+    "tslint-etc": "^1.13.10",
     "tslint-plugin-prettier": "^2.3.0",
-    "tsutils": "^3.17.1",
-    "typescript": "^4.2.4"
+    "tsutils": "^3.21.0",
+    "typescript": "^4.3.5"
   },
   "importSort": {
     ".ts, .tsx": {
