--- a/.circleci/config.ch9.yml
+++ b/.circleci/config.ch9.yml
@@ -77,7 +77,7 @@ workflows:
             - build
           filters:
             branches:
-              only: master
+              only: main
       - deploy:
           requires:
             - hold
