--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -211,4 +211,4 @@ workflows:
             - default
           filters:
             branches:
-              only: master
+              only: main
