update to port 4200

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,9 @@
       "name": "Debug npm start with Chrome",
       "type": "chrome",
       "request": "launch",
-      "url": "http://localhost:5000/#",
+      "url": "http://localhost:4200/#",
       "webRoot": "${workspaceRoot}",
-      "runtimeArgs": [
-        "--remote-debugging-port=9222"
-      ],
+      "runtimeArgs": ["--remote-debugging-port=9222"],
       "sourceMaps": true,
       "preLaunchTask": "npm: start"
     },
@@ -17,7 +15,7 @@
       "name": "Debug npm start with Edge",
       "type": "edge",
       "request": "launch",
-      "url": "http://localhost:5000/#",
+      "url": "http://localhost:4200/#",
       "webRoot": "${workspaceRoot}",
       "sourceMaps": true,
       "preLaunchTask": "npm: start"
@@ -28,9 +26,7 @@
       "request": "launch",
       "url": "http://localhost:9876/debug.html",
       "webRoot": "${workspaceRoot}",
-      "runtimeArgs": [
-        "--remote-debugging-port=9222"
-      ],
+      "runtimeArgs": ["--remote-debugging-port=9222"],
       "sourceMaps": true,
       "preLaunchTask": "npm: test"
     },
@@ -49,9 +45,7 @@
       "request": "launch",
       "program": "${workspaceRoot}/node_modules/protractor/bin/protractor",
       "protocol": "inspector",
-      "args": [
-        "${workspaceRoot}/protractor.conf.js"
-      ]
+      "args": ["${workspaceRoot}/protractor.conf.js"]
     }
   ]
 }
