--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 orbs:
-  coveralls: coveralls/coveralls@1.0.4
-  cypress: cypress-io/cypress@1
+  coveralls: coveralls/coveralls@2.2.1
+  cypress: cypress-io/cypress@3.1.3
 commands:
   install:
     description: 'Install project dependencies'
@@ -99,14 +99,14 @@ commands:
 jobs:
   initialize:
     docker:
-      - image: circleci/node:lts-browsers
+      - image: cimg/node:lts-browsers
     working_directory: ~/repo
     steps:
       - install:
           warm-cache: true
   default:
     docker:
-      - image: circleci/node:lts-browsers
+      - image: cimg/node:lts-browsers
     working_directory: ~/repo
     steps:
       - install
@@ -115,14 +115,14 @@ jobs:
       - store
   deploy:
     docker:
-      - image: circleci/node:lts
+      - image: cimg/node:lts
     working_directory: ~/repo
     steps:
       - deploy_vercel
 
   ch7: # this job is only here to verify sample code from the book, remove it in your own projects
     docker:
-      - image: circleci/node:lts-browsers
+      - image: cimg/node:lts-browsers
     working_directory: ~/repo
     steps:
       - install
@@ -130,7 +130,7 @@ jobs:
           project: 'ch7'
   ch8: # this job is only here to verify sample code from the book, remove it in your own projects
     docker:
-      - image: circleci/node:lts-browsers
+      - image: cimg/node:lts-browsers
     working_directory: ~/repo
     steps:
       - install
@@ -138,7 +138,7 @@ jobs:
           project: 'ch8'
   ch10: # this job is only here to verify sample code from the book, remove it in your own projects
     docker:
-      - image: circleci/node:lts-browsers
+      - image: cimg/node:lts-browsers
     working_directory: ~/repo
     steps:
       - install
@@ -146,7 +146,7 @@ jobs:
           project: 'ch10'
   ch11: # this job is only here to verify sample code from the book, remove it in your own projects
     docker:
-      - image: circleci/node:lts-browsers
+      - image: cimg/node:lts-browsers
     working_directory: ~/repo
     steps:
       - install
@@ -154,7 +154,7 @@ jobs:
           project: 'ch11'
   ch12: # this job is only here to verify sample code from the book, remove it in your own projects
     docker:
-      - image: circleci/node:lts-browsers
+      - image: cimg/node:lts-browsers
     working_directory: ~/repo
     steps:
       - install
@@ -162,7 +162,7 @@ jobs:
           project: 'ch12'
   ch13: # this job is only here to verify sample code from the book, remove it in your own projects
     docker:
-      - image: circleci/node:lts-browsers
+      - image: cimg/node:lts-browsers
     working_directory: ~/repo
     steps:
       - install
@@ -170,7 +170,7 @@ jobs:
           project: 'ch13'
   ch14: # this job is only here to verify sample code from the book, remove it in your own projects
     docker:
-      - image: circleci/node:lts-browsers
+      - image: cimg/node:lts-browsers
     working_directory: ~/repo
     steps:
       - install
