--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,8 @@
     "editorGroup": false
   },
   "ng-evergreen.upgradeChannel": "Latest",
-  "editor.autoIndent": "full"
+  "editor.autoIndent": "full",
+  "[shellscript]": {
+    "editor.defaultFormatter": "foxundermoon.shell-format"
+  }
 }
