--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "style:fix": "import-sort --write \"**/{src,tests,e2e}/**/*.ts\" && prettier --write \"**/{src,tests,e2e}/**/*.{*css,ts}\" && js-beautify \"**/src/**/*.html\"",
-    "style": "import-sort -l \"**/{src,tests,e2e}/**/*.ts\" && prettier --check \"**/{src,tests,e2e}/**/*.{*css,ts}\"",
+    "style:fix": "prettier --write \"**/{src,tests,e2e}/**/*.{*css,ts}\"",
+    "style": "prettier --check \"**/{src,tests,e2e}/**/*.{*css,ts}\"",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -62,7 +62,7 @@
     "@angular/common": "13.3.11",
     "@angular/compiler": "13.3.11",
     "@angular/core": "13.3.11",
-    "@angular/fire": "^7.6.1",
+    "@angular/fire": "^7.2.0",
     "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "13.3.11",
     "@angular/material": "13.3.9",
@@ -74,18 +74,17 @@
     "@ngrx/entity": "^13.2.0",
     "@ngrx/store": "^13.2.0",
     "@ngrx/store-devtools": "^13.2.0",
-    "firebase": "^9.0.0",
+    "firebase": "^9.23.0",
     "jwt-decode": "^3.1.2",
     "ngx-mask": "^12.0.0",
     "rxjs": "^7.5.0",
     "subsink": "^1.0.2",
     "ts-enum-util": "^4.0.2",
-    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.9",
-    "@angular/cli": "13.3.9",
+    "@angular-devkit/build-angular": "^13.3.11",
+    "@angular/cli": "^13.3.11",
     "@angular/compiler-cli": "13.3.11",
     "@angular/language-service": "13.3.11",
     "@types/jasmine": "~3.8.2",
@@ -93,19 +92,15 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^16.4.10",
-    "angular-unit-test-helper": "^12.0.0",
+    "angular-unit-test-helper": "^13.0.3",
     "codelyzer": "^6.0.2",
     "cross-conf-env": "^1.2.1",
     "dev-norms": "^2.0.4",
     "fake-jwt-sign": "^1.1.1",
-    "http-server": "^0.12.3",
-    "import-sort": "^6.0.0",
-    "import-sort-cli": "^6.0.0",
-    "import-sort-parser-typescript": "^6.0.0",
-    "import-sort-style-module": "^6.0.0",
+    "http-server": "^14.1.1",
     "init-dev-env": "^2.0.0",
-    "jasmine": "^3.8.0",
-    "jasmine-core": "~3.8.0",
+    "jasmine": "^4.0.2",
+    "jasmine-core": "^4.0.1",
     "jasmine-spec-reporter": "~7.0.0",
     "js-beautify": "^1.14.0",
     "karma": "~6.3.4",
@@ -116,24 +111,19 @@
     "karma-htmlfile-reporter": "^0.3.8",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "ng-mocks": "^14.11.0",
     "npm-run-all": "^4.1.5",
     "open-cli": "^7.0.0",
     "prettier": "^2.3.2",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "rimraf": "^5.0.1",
     "ts-node": "~10.1.0",
-    "tslint": "~6.1.0",
+    "tslib": "^2.6.1",
+    "tslint": "~6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-etc": "^1.13.10",
     "tslint-plugin-prettier": "^2.3.0",
     "tsutils": "^3.21.0",
     "typescript": "^4.6.4"
-  },
-  "importSort": {
-    ".ts, .tsx": {
-      "parser": "typescript",
-      "style": "module",
-      "options": {}
-    }
   }
 }
